RESOLVED FIXED305444
REGRESSION(304570@main): broke navigation gestures after cross-origin navigations
https://bugs.webkit.org/show_bug.cgi?id=305444
Summary REGRESSION(304570@main): broke navigation gestures after cross-origin navigat...
WebKit Commit Bot
Reported 2026-01-13 20:31:05 PST
https://commits.webkit.org/304570@main introduced a regression: broke navigation gestures after cross-origin navigations This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 304570@main (5.89 KB, patch)
2026-01-13 20:31 PST, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2026-01-13 20:31:14 PST
Created attachment 477993 [details] REVERT of 304570@main Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2026-01-13 20:33:26 PST
Committed 305554@main (618a84f536d0): <https://commits.webkit.org/305554@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477993 [details].
Radar WebKit Bug Importer
Comment 3 2026-01-13 20:34:12 PST
Note You need to log in before you can comment on or make changes to this bug.