Cherry-pick 618a84f536d0. rdar://168270220

Unreviewed, reverting 304570@main and 304620@main.
    https://bugs.webkit.org/show_bug.cgi?id=305444

    broke navigation gestures after cross-origin navigations

    Reverted changesets:

    "REGRESSION( iOS 26): 2X TestWebKitAPI.ProcessSwap gesture controller API Tests are constant failures"
    https://bugs.webkit.org/show_bug.cgi?id=301536
    https://commits.webkit.org/304570@main

    "Clean up ViewGestureControllerIOS invalidate method"

    https://bugs.webkit.org/show_bug.cgi?id=304351
    https://commits.webkit.org/304620@main
    Canonical link: https://commits.webkit.org/305554@main

Identifier: 305413.64@safari-7624-branch