Source/WebKit/UIProcess/ViewGestureController.h
@@ -115,7 +115,6 @@ public:
     void deref() const final { RefCounted::deref(); }
 
     void platformTeardown();
-    void platformDisconnectFromProcess();
 
     void disconnectFromProcess();
     void connectToProcess();
