Source/WebKit/UIProcess/mac/ViewGestureControllerMac.mm
@@ -86,10 +86,6 @@ void ViewGestureController::platformTeardown()
         removeSwipeSnapshot();
 }
 
-void ViewGestureController::platformDisconnectFromProcess()
-{
-}
-
 double ViewGestureController::resistanceForDelta(double deltaScale, double currentScale, double minMagnification, double maxMagnification)
 {
     // Zoom out with slight acceleration, until we reach minimum scale.
